# fat_control_api

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  fly.toml  pyproject.toml  vercel.json
assets/diarias/: grupos_cidade_rows.csv
assets/estados_cidades/: estados.csv  municipios.csv
assets/queries/: posto_grad.sql  quads_type_rows.sql
fcontrol_api/: app.py  database.py  exceptions.py  middlewares.py  models.py  schemas.py  security.py  settings.py
fcontrol_api/cleanup/: __init__.py  runner.py
fcontrol_api/cleanup/models/: __init__.py  cleanup_result.py
fcontrol_api/cleanup/tasks/: __init__.py  expired_auth_codes.py  old_login_logs.py  old_unavailability.py
fcontrol_api/docs/planning/: RBAC_MANAGEMENT_IMPLEMENTATION_PLAN.md  ZERO_TRUST_IMPLEMENTATION_PLAN.md  refatoracao-metadata-base-unica.md
fcontrol_api/enums/: especialidade.py  indisp.py  posto_grad.py  quadro.py
fcontrol_api/models/: __init__.py
fcontrol_api/models/aeromedica/: __init__.py  atas.py  base.py  cartoes.py
fcontrol_api/models/cegep/: __init__.py  base.py  comiss.py  dados_bancarios.py  diarias.py  etiquetas.py  missoes.py  orcamento.py
fcontrol_api/models/estatistica/: __init__.py  base.py  esf_aer.py  etapa.py  missao.py
fcontrol_api/routers/: __init__.py  admin_cleanup.py  auth.py  cities.py  funcoes.py  indisp.py  logs.py  organizacoes.py  pessoas.py  postos.py  projetos.py  quads.py  security.py  storage.py  tenants.py  tripulantes.py  users.py
fcontrol_api/schemas/: auth.py  cidade.py  cleanup.py  comiss.py  custos.py  diaria.py  etiquetas.py  funcoes.py  funcs.py  indisp.py  logs.py  message.py  missoes.py  om.py  organizacao.py  pagination.py  pessoas.py  posto_grad.py  projeto.py  quads.py  response.py  security.py  storage.py  tenant.py  tripulantes.py  users.py
fcontrol_api/services/: aeromedica_extracao.py  auth.py  comis.py  etapas.py  excel_etapas.py  financeiro.py  imagem.py  logs.py  missao.py  om.py  pdf.py  portal_transparencia.py  storage.py  users.py  vigencia.py
fcontrol_api/utils/: boot_profiler.py  datas.py  date_converter.py  financeiro.py  params.py  responses.py  router_loader.py  sanitize.py  strings.py  validators.py
migrations/: env.py
migrations/versions/: 029a74e6f1b3_ordem_de_missão.py  07063be78a4b_ajuste_users.py  09a44a4f187b_pernoites_rev.py  0c4c4b16398e_initial_schema.py  10c89e0ce609_create_atas_inspecao.py  11b4c104620e_add_seg_voo_schema_and_crm_certificados_.py  121a6b950ed5_ajustando_f_key_users_pg_para_posto_grad.py  1566ae06b25b_remove_prox_insp_from_aeronaves.py  170e8c2eeae8_tabela_soldos.py  1a59be932831_aeromedica.py  1aa666b664a7_grupos_diarias_cidades_pg.py  1d11900e4658_checkconstraints_valor_diarias_valor_0_.py  1e3721fd4a56_inserindo_uae_em_quadsgroup.py  23feef66fb2d_modulo_operacoes.py  2765b696ed0f_user_action_logs.py  2880ea0826c6_estatistica_feature.py  3367bac2b2e2_add_telefone_to_users.py  349bc7a3af18_add_tabela_etiqueta.py  37152b40181b_ajuste_em_quads_para_fkey_de_quads_type.py  38fd0e053691_active_user.py  41408c0ce2c0_add_remuneracao_mes_ano_aux_transp_to_.py  425b0b0c16eb_add_labels_and_associate_with_om.py  437734bf2a2a_estados_e_cidades.py  45705ff1df74_ant_rel_users.py  490dffb3f8c9_convert_serial_to_identity.py  49ff875dd599_n_doc_frag_mis_to_string_padded.py  4d9e020b1122_ajuste_tabela_tripulantes.py  4e24669e6347_add_cascade_delete_to_oi_etapa_and_trip_.py  5860a920441a_inserindo_quadsfunc.py  644c5a6b323d_add_unique_constraint_quads_func_type_.py  65c2476a7f97_add_is_sim_to_aeronaves.py  6680e240f301_remove_ag_cemal.py  68f232822932_multi_tenant_org_por_sigla.py  7b0660382dec_add_updated_at_and_deleted_at_to_indisp.py  7c95b11b6c7b_dados_bancarios.py  7d718fe198e6_indisp_mtv.py  806d5bf05b8b_ajustando_hash_pass.py  81819113504c_index_etapa_id_in_oi_and_trip.py  85e9285b64c3_add_updated_at_to_indisp.py  8691c817cb5d_user_roles.py  (+44 more)
queries/: quads_group_rows.sql  test_trip_funcs_rows.sql  test_tripulantes_rows.sql  users_rows.sql
scripts/: check_comiss_cache.py  cleanup_common_quads.py  cleanup_old_indisp.py  cleanup_old_login_logs.py  e2e_db_setup.sh  generate_pkce.py  insert_dados_bancarios.py  migrate_atas_bucket.py  popular_custos_missoes.py  populate_comiss_cache.py  run_cleanup.py  seed_e2e_db.py  seed_estatistica.sql  seed_passaporte_image_perms.sql  seed_passaportes_perms.sql  sync_prod_to_dev.sh
tests/: ___test_quads.py  conftest.py  d_test_auth.py  d_test_db.py  d_test_funcs.py  d_test_quads.py  d_test_security.py  d_test_trips.py  d_test_users.py  factories.py  test_app.py  test_auth.py  test_db.py  test_funcs.py  test_indisp.py  test_postos.py  test_security.py  test_trips.py  test_users.py
tests/api/: conftest.py
tests/api/auth/: conftest.py  (+4 more)
tests/cleanup/: conftest.py  test_old_login_logs.py  test_old_unavailability.py  test_runner.py
tests/integration/: test_db.py
tests/schemas/: __init__.py  test_etapa_schemas.py  test_tripulantes_schemas.py  test_user_schemas.py
tests/seed/: __init__.py  diarias.py  estados_cidades.py  posto_grad.py  quads.py  roles.py  soldos.py  tenants.py
tests/services/: test_comis.py
tests/utils/: test_validators.py
(+223 files in other folders)
