[project]
name = "fcontrol-api"
version = "0.1.0"
description = ""
authors = [{ name = "Raphael R Caldas", email = "raphael008@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi[standard]>=0,<1",
    "pydantic[email]>=2.8.2,<3",
    "sqlalchemy[mypy]>=2.0.37,<3",
    "pydantic-settings>=2.4.0,<3",
    "alembic>=1.13.2,<2",
    "pyjwt>=2.9.0,<3",
    "pwdlib[argon2]>=0,<1",
    "tzdata>=2024.1",
    "python-multipart>=0,<1",
    "httptools>=0.6.4,<1",
    "greenlet>=3.1.1,<4",
    "asyncpg>=0.30.0,<1",
    "openpyxl>=3.1,<4",
    "boto3>=1.35,<2",
    "pdfplumber>=0.11,<1",
    "defusedxml>=0.7",
]

[dependency-groups]
dev = [
    "ruff>=0,<1",
    "pytest>=9.0.3,<10",
    "psycopg2-binary>=2.9.10,<3",
    "pytest-cov>=5.0.0,<6",
    "taskipy>=1.13.0,<2",
    "httpx>=0,<1",
    "factory-boy>=3.3.0,<4",
    "freezegun>=1.5.1,<2",
    "aiosqlite>=0.20.0,<1",
    "trio>=0.28.0,<1",
    "pytest-asyncio>=1.0.0,<2",
    "gevent>=24.11.1,<25",
    "tqdm>=4.66.0,<5",
    "testcontainers[postgres]>=4.13.3,<5",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = [
    'PLR0913',
    'PLR0915',
    'PLR0914',
    'PLR0917',
    'PLR0912',
    'PLR6301',
    'PLR2004',
]

[tool.ruff.lint.per-file-ignores]
"fcontrol_api/models/*/__init__.py" = ['F401']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi run fcontrol_api/app.py --reload --host 0.0.0.0 --port 8000'

pre_test = 'task lint'
test = 'pytest -s -x --cov=fcontrol_api -vv'
post_test = 'coverage html'

cleanup = 'python -m scripts.run_cleanup'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
